style(hero__xl): fix white space
This commit includes changes to white spaces on xl screens.
The change:

- Removal of white spaces on the main hero block

The change ensure that the block renders well on xl devices and
window or screen sizes.

--- a/style.css
+++ b/style.css
@@ -2522,7 +2522,7 @@ vertical-align: top;
   display: flex;
   justify-content: center;
   gap: 6rem;
-  margin-top: 6rem;
+  margin: 9rem 0 -6rem;
 }
 
 .hero__info-block {
